@@ -1,5 +1,8 @@
 2008-01-22  Tor Lillqvist  <tml@novell.com>
 
+	* gconf-zip.in: Look for catalogs in share/locale first, as that
+	is where they will be with a properly built GNU gettext.
+
 	* gconf/gconf-internals.c: Map pipe() to _pipe() on Win32.
 
 2008-01-21  Kjartan Maraas  <kmaraas@gnome.org>
